--- a/style/style-page-1/style-page-1.css
+++ b/style/style-page-1/style-page-1.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Miracle";
-  src: url("/assets/fonts/Miracle/Miracle-Regular.ttf");
+  src: url("/assets/fonts/Miracle/miracle-regular.woff2");
 }
 @font-face {
   font-family: "Voyage";
@@ -15,4 +15,105 @@
   font-weight: 700;
   font-family: Helvetica;
   src: url("/assets/fonts/Helvetica-neue-lt-std/Helvetica-bold.otf");
+}
+.our-gallery__title, .best-apartments__title {
+  font-family: "Miracle";
+  font-weight: 400;
+  font-size: 150px;
+  line-height: 130px;
+}
+
+.our-gallery__text-element-center {
+  font-family: Helvetica;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+}
+
+.our-gallery__text-element-left, .best-apartments__text {
+  font-family: Helvetica;
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 31.2px;
+}
+
+* {
+  margin: 0 auto;
+  padding: 0;
+  max-width: 1920px;
+  width: 100%;
+}
+
+.best-apartments {
+  background-image: url(/assets/img/img-page-1/img-bedroom-grey.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 1080px;
+}
+
+.best-apartments__img {
+  margin-top: 200px;
+}
+
+.best-apartments__title {
+  color: #FCD043;
+  text-transform: capitalize;
+  padding-top: 100px;
+  margin-left: 31px;
+  margin-bottom: 250px;
+  width: 872px;
+}
+
+.best-apartments__text {
+  color: #FCD043;
+  text-transform: capitalize;
+  margin-left: 31px;
+  width: 440px;
+}
+
+.our-gallery {
+  background-color: #1B3B36;
+  height: 2460px;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: repeat(6, 1fr);
+}
+
+.our-gallery__text-element-left {
+  height: 62px;
+  width: 255px;
+  padding-top: 323px;
+  color: #FFFCF6;
+  grid-area: 1/1/2/2;
+}
+
+.our-gallery__logo {
+  height: 107px;
+  width: 150px;
+  padding-top: 323px;
+  grid-area: 1/2/2/3;
+}
+
+.our-gallery__title {
+  color: #FCD043;
+  margin-top: 50px;
+  grid-area: 2/2/3/3;
+  text-align: center;
+}
+
+.our-gallery__img-bench {
+  grid-area: 3/1/4/2;
+}
+
+.our-gallery__text-element-center {
+  width: 450px;
+  height: 112px;
+  grid-area: 3/2/4/3;
+  color: #FFFCF6;
+}
+
+.our-gallery__img-lobby {
+  width: 600px;
+  height: 400px;
+  grid-area: 3/3/4/4;
 }/*# sourceMappingURL=style-page-1.css.map */
