--- a/style/style-page-2/style-page-2.css
+++ b/style/style-page-2/style-page-2.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Miracle";
-  src: url("/assets/fonts/Miracle/Miracle-Regular.ttf");
+  src: url("/assets/fonts/Miracle/miracle-regular.woff2");
 }
 @font-face {
   font-family: "Voyage";
