added block <our galery>

--- a/style/_vars.scss
+++ b/style/_vars.scss
@@ -2,7 +2,7 @@ $font-weight-400: 400;
 $font-weight-700: 700;
 $color-yellow: #FCD043;
 $color-white: #FFFCF6;
-$color-dark-green: #313F387A;
+$color-dark-green: #313F38;
 $color-nordic-green: #1B3B36;
 
 @font-face {
